--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,14 @@
     <script src="src/notes-model.js"></script>
     <script src="src/notes-list-model.js"></script>
     <script src="src/notes-list-view.js"></script>
+    <script src="src/single-note-view.js"></script>
     <script src="src/assert.js"></script>
     <script src="src/notes-model-tests.js"></script>
     <script src="src/notes-list-model-tests.js"></script>
     <script src="src/notes-list-view-tests.js"></script>
     <script src="src/note-controller.js"></script>
     <script src="src/note-controller-tests.js"></script>
+    <script src="src/single-note-view-tests.js"></script>
 
   </body>
 </html>
